fixed horizontal scroll

--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     height: 100vh;
     justify-content: center;
+    width: 100%;
 
     &__content {
         @include screen($screen-simple) {
