--- a/src/sass/pages/innovation.scss
+++ b/src/sass/pages/innovation.scss
@@ -5,7 +5,7 @@
     background-size: cover;
     height: 100vh;
     position: relative;
-    width: 100vw;
+    width: 100%;
 
     &__container {
         padding: 0 2rem;
